@@ -38,13 +38,6 @@
         </dependency>
 
         <dependency>
-            <!-- deprecated -->
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-neo4j</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>${spring.version}</version>
@@ -86,19 +79,6 @@
             <artifactId>algorithms</artifactId>
             <version>${project.version}</version>
         </dependency>
-
-       <!-- Deprecated. -->
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>approach-1</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <!-- Deprecated. -->
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>approach-2</artifactId>
-            <version>${project.version}</version>
-        </dependency>
     </dependencies>
     
     <build>
@@ -107,6 +87,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.0.0</version>
+                <configuration>
+                    <jvmArguments>
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                    </jvmArguments>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
